k8s/overlays/prod/redis-pvc-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
