k8s/overlays/prod/server-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu:    500m
              memory: 512Mi
            limits:
              cpu:    2000m
              memory: 2Gi
