k8s/overlays/prod/server-workload-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    metadata:
      labels:
        azure.workload.identity/use: "true"
